--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 	<link rel="icon" type="image/png" href="assets/favicon.webp">
-    <link rel="stylesheet" href="/assets/css/index.css">
+    <link rel="stylesheet" href="assets/css/index.css">
 </head>
 <body>
     <!-- Hero Section -->
@@ -439,6 +439,6 @@
 
 
     <!-- JavaScript for Node Animation and Modal -->
-    <script src="/assets/js/index.js"></script>
+    <script src="assets/js/index.js"></script>
 </body>
 </html>
