--- a/index.html
+++ b/index.html
@@ -104,19 +104,19 @@
                     <h3>Tools</h3>
                     <div class="skills-grid">
                         <div class="skill-item">
-                            <img src="/assets/skills/sql.png" class="custom-skill-icon" alt="SQL">
+                            <img src="assets/skills/sql.png" class="custom-skill-icon" alt="SQL">
                             <span class="skill-name">SQL</span>
                         </div>
                         <div class="skill-item">
-                            <img src="/assets/skills/chart.png" class="custom-skill-icon" alt="Power BI">
+                            <img src="assets/skills/chart.png" class="custom-skill-icon" alt="Power BI">
                             <span class="skill-name">Power BI</span>
                         </div>
                         <div class="skill-item">
-                            <img src="/assets/skills/python.png" class="custom-skill-icon" alt="Python">
+                            <img src="assets/skills/python.png" class="custom-skill-icon" alt="Python">
                             <span class="skill-name">Python</span>
                         </div>
                         <div class="skill-item">
-                            <img src="/assets/skills/git.png" class="custom-skill-icon" alt="Git">
+                            <img src="assets/skills/git.png" class="custom-skill-icon" alt="Git">
                             <span class="skill-name">Git</span>
                         </div>
                         <div class="skill-item">
@@ -124,7 +124,7 @@
                             <span class="skill-name">GitHub</span>
                         </div>
                         <div class="skill-item">
-                            <img src="/assets/skills/database.png" class="custom-skill-icon" alt="MongoDB">
+                            <img src="assets/skills/database.png" class="custom-skill-icon" alt="MongoDB">
                             <span class="skill-name">MongoDB</span>
                         </div>
                         <div class="skill-item">
@@ -143,11 +143,11 @@
                             <span class="skill-name">Machine Learning</span>
                         </div> -->
                         <div class="skill-item">
-                            <img src="/assets/skills/chart-pie.png" class="custom-skill-icon" alt="Data Visualization">
+                            <img src="assets/skills/chart-pie.png" class="custom-skill-icon" alt="Data Visualization">
                             <span class="skill-name">Data Visualization</span>
                         </div>
                         <div class="skill-item">
-                            <img src="/assets/skills/data-modelling.png" class="custom-skill-icon" alt="Data Visualization">
+                            <img src="assets/skills/data-modelling.png" class="custom-skill-icon" alt="Data Visualization">
                             <!-- <i class="fas fa-project-diagram skill-icon"></i> -->
                             <span class="skill-name">Data Modeling</span>
                         </div>
@@ -156,7 +156,7 @@
                             <span class="skill-name">Version Control</span>
                         </div>
                         <div class="skill-item">
-                            <img src="/assets/skills/chart-bar.png" class="custom-skill-icon" alt="Data Analysis">
+                            <img src="assets/skills/chart-bar.png" class="custom-skill-icon" alt="Data Analysis">
                             <span class="skill-name">Data Analysis</span>
                         </div>
                         <!-- <div class="skill-item">
@@ -171,31 +171,31 @@
                     <h3>Frameworks</h3>
                     <div class="skills-grid">
                         <div class="skill-item">
-                            <img src="/assets/skills/python.png" class="custom-skill-icon" alt="Flask">
+                            <img src="assets/skills/python.png" class="custom-skill-icon" alt="Flask">
                             <span class="skill-name">Flask</span>
                         </div>
                         <div class="skill-item">
-                            <img src="/assets/skills/django.webp" class="custom-skill-icon" alt="Data Visualization">
+                            <img src="assets/skills/django.webp" class="custom-skill-icon" alt="Data Visualization">
                             <span class="skill-name">Django</span>
                         </div>
                         <div class="skill-item">
-                            <img src="/assets/skills/html.png" class="custom-skill-icon" alt="HTML5">
+                            <img src="assets/skills/html.png" class="custom-skill-icon" alt="HTML5">
                             <span class="skill-name">HTML5</span>
                         </div>
                         <div class="skill-item">
-                            <img src="/assets/skills/css.png" class="custom-skill-icon" alt="HTML5">
+                            <img src="assets/skills/css.png" class="custom-skill-icon" alt="HTML5">
                             <span class="skill-name">CSS3</span>
                         </div>
                         <div class="skill-item">
-                            <img src="/assets/skills/bootsrap.png" class="custom-skill-icon" alt="Data Visualization">
+                            <img src="assets/skills/bootsrap.png" class="custom-skill-icon" alt="Data Visualization">
                             <span class="skill-name">Bootstrap</span>
                         </div>
                         <div class="skill-item">
-                            <img src="/assets/skills/java-script.png" class="custom-skill-icon" alt="HTML5">
+                            <img src="assets/skills/java-script.png" class="custom-skill-icon" alt="HTML5">
                             <span class="skill-name">JavaScript</span>
                         </div>
                         <div class="skill-item">
-                            <img src="/assets/skills/java.png" class="custom-skill-icon" alt="HTML5">
+                            <img src="assets/skills/java.png" class="custom-skill-icon" alt="HTML5">
                             <span class="skill-name">Java</span>
                         </div>
                     </div>
