--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                         </div>
                         <p>A Django-based water quality prediction system using multiple machine learning models that provides parameter assessment and treatment suggestions through both manual input and IoT sensor integration.</p>
                         <div class="project-buttons">
-                            <!-- <a href="/pages/aquasense.html" target="_blank" onclick="event.stopPropagation()" class="btn btn-secondary btn-sm">View Project</a> -->
+                            <!-- <a href="./pages/aquasense.html" target="_blank" onclick="event.stopPropagation()" class="btn btn-secondary btn-sm">View Project</a> -->
                             <a href="/pages/aquasense.html" class="btn btn-secondary btn-sm">View Project &nbsp;<i class="fa-solid fa-up-right-from-square"></i></a>
                         </div>
                     </div>
@@ -255,7 +255,7 @@
                         </div>
                         <p>A Power BI dashboard analyzing survey data from 10,000 respondents to provide strategic insights for CodeX, a German energy drink company entering the Indian market.</p>
                         <div class="project-buttons">
-                            <!-- <a href="/pages/aquasense.html" target="_blank" onclick="event.stopPropagation()" class="btn btn-secondary btn-sm">View Project</a> -->
+                            <!-- <a href="./pages/aquasense.html" target="_blank" onclick="event.stopPropagation()" class="btn btn-secondary btn-sm">View Project</a> -->
                             <a href="/pages/codex.html" class="btn btn-secondary btn-sm">View Project &nbsp;<i class="fa-solid fa-up-right-from-square"></i></a>
                         </div>
                     </div>
@@ -281,7 +281,7 @@
                         </div>
                         <p>A web-based tool that detects plagiarism by comparing text against internet sources and between files using Python and the KMP algorithm.</p>
                         <div class="project-buttons">
-                            <!-- <a href="/pages/aquasense.html" target="_blank" onclick="event.stopPropagation()" class="btn btn-secondary btn-sm">View Project</a> -->
+                            <!-- <a href="./pages/aquasense.html" target="_blank" onclick="event.stopPropagation()" class="btn btn-secondary btn-sm">View Project</a> -->
                             <a href="/pages/plag.html" class="btn btn-secondary btn-sm">View Project &nbsp;<i class="fa-solid fa-up-right-from-square"></i></a>
                         </div>
                     </div>
@@ -306,7 +306,7 @@
                         </div>
                         <p>A data-driven analysis of promotional campaigns for AtliQ Mart retail chain using Python to identify high-performing promotions and provide actionable insights.</p>
                         <div class="project-buttons">
-                            <!-- <a href="/pages/aquasense.html" target="_blank" onclick="event.stopPropagation()" class="btn btn-secondary btn-sm">View Project</a> -->
+                            <!-- <a href="./pages/aquasense.html" target="_blank" onclick="event.stopPropagation()" class="btn btn-secondary btn-sm">View Project</a> -->
                             <a href="/pages/atliq.html" class="btn btn-secondary btn-sm">View Project &nbsp;<i class="fa-solid fa-up-right-from-square"></i></a>
                         </div>
                     </div>
