--- a/pages/beast_projects.html
+++ b/pages/beast_projects.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All Projects - Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-	<link rel="icon" type="image/png" href="/assets/favicon.webp">
+	<link rel="icon" type="image/png" href="../assets/favicon.webp">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="../assets/css/beast_projects.css">
 </head>
@@ -75,7 +75,7 @@
                 <!-- Project 1 -->
                 <div class="project-card" data-project="aquasense" data-tools="django,python" data-techniques="machine-learning,iot-integration" data-industry="environment">
                     <div class="project-image">
-                        <img src="/assets/project_images/aquasense.png" alt="AquaSense AI">
+                        <img src="../assets/project_images/aquasense.png" alt="AquaSense AI">
                     </div>
                     <div class="project-info">
                         <h3 class="project-title">AquaSense AI</h3>
@@ -100,7 +100,7 @@
                 <!-- Project 2 (Example) -->
                 <div class="project-card" data-project="business-insights" data-tools="powerbi" data-techniques="data-analysis,visualization" data-industry="finance,retail">
                     <div class="project-image">
-                        <img src="/assets/project_images/codex.jpeg" alt="Business Insights 360">
+                        <img src="../assets/project_images/codex.jpeg" alt="Business Insights 360">
                     </div>
                     <div class="project-info">
                         <h3 class="project-title">CodeX Drink Insights</h3>
@@ -119,7 +119,7 @@
                 <!-- Project 3 (Example) -->
                 <div class="project-card" data-project="hospitality-analysis" data-tools="powerbi" data-techniques="data-analysis,visualization" data-industry="hospitality">
                     <div class="project-image">
-                        <img src="/assets/project_images/plag.png" alt="Hospitality Analysis">
+                        <img src="../assets/project_images/plag.png" alt="Hospitality Analysis">
                     </div>
                     <div class="project-info">
                         <h3 class="project-title">Plagiarism Detection using ML</h3>
@@ -139,7 +139,7 @@
                 <!-- Project 4 (Example) -->
                 <div class="project-card centered" data-project="sales-analysis" data-tools="tableau" data-techniques="data-analysis,visualization" data-industry="retail">
                     <div class="project-image">
-                        <img src="/assets/project_images/atliq.webp" alt="Sales and Finance Analytics">
+                        <img src="../assets/project_images/atliq.webp" alt="Sales and Finance Analytics">
                     </div>
                     <div class="project-info">
                         <h3 class="project-title">Atliq Mart Analysis</h3>
