--- a/pages/beast_projects.html
+++ b/pages/beast_projects.html
@@ -14,7 +14,7 @@
         <div class="container">
             <h1>All Projects</h1>
             <nav>
-                <a href="/index.html#projects">Back to Home</a>
+                <a href="../index.html#projects">Back to Home</a>
             </nav>
         </div>
     </header>
