--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 	<link rel="icon" type="image/png" href="assets/favicon.webp">
     <link rel="stylesheet" href="assets/css/index.css">
+
+    <meta property="og:title" content="Prathamesh's Portfolio">
+    <meta property="og:url" content="https://prathameshv07.github.io/portfolio/">
+    <meta property="og:image" content="https://prathameshv07.github.io/portfolio/assets/preview.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:description" content="Welcome to my portfolio!">
 </head>
 <body>
     <!-- Hero Section -->
