--- a/pages/aquasense.html
+++ b/pages/aquasense.html
@@ -8,6 +8,13 @@
 	<link rel="icon" type="image/webp" href="../assets/favicon.webp">
     <link rel="stylesheet" href="../assets/css/project_pages.css">
     <!-- Add any additional stylesheets here -->
+
+    <meta property="og:title" content="Prathamesh's Portfolio">
+    <meta property="og:url" content="https://prathameshv07.github.io/portfolio/">
+    <meta property="og:image" content="https://prathameshv07.github.io/portfolio/assets/favicon.webp">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:description" content="Welcome to my portfolio!">
 </head>
 <body>
     <div class="project-detail-container">
@@ -54,7 +61,7 @@
                 <!-- Example of iframe integration capability -->
                 <h2>Live Dashboard</h2>
                 <div class="iframe-container">
-                    <!-- Placeholder for iframe content -->
+                    <!-- Placeholder for iframe content like `https://www.example.com` -->
                     <iframe src="https://aquasense-ai.onrender.com/" width="100%" height="550" frameborder="0"></iframe>
                 </div>
                 
