--- a/pages/beast_projects.html
+++ b/pages/beast_projects.html
@@ -8,6 +8,13 @@
 	<link rel="icon" type="image/png" href="../assets/favicon.webp">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="../assets/css/beast_projects.css">
+
+    <meta property="og:title" content="Prathamesh's Portfolio">
+    <meta property="og:url" content="https://prathameshv07.github.io/portfolio/">
+    <meta property="og:image" content="https://prathameshv07.github.io/portfolio/assets/favicon.webp">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:description" content="Welcome to my portfolio!">
 </head>
 <body>
     <header>
@@ -69,7 +76,7 @@
         </div>
     </section>
 
-    <section class="all-projects">
+    <section class="all-projects" id="projects">
         <div class="container">
             <div class="projects-grid">
                 <!-- Project 1 -->
