--- a/pages/codex.html
+++ b/pages/codex.html
@@ -8,6 +8,13 @@
     <link rel="icon" type="image/png" href="../assets/favicon.webp">
     <link rel="stylesheet" href="../assets/css/project_pages.css">
     <!-- Add any additional stylesheets here -->
+
+    <meta property="og:title" content="Prathamesh's Portfolio">
+    <meta property="og:url" content="https://prathameshv07.github.io/portfolio/">
+    <meta property="og:image" content="https://prathameshv07.github.io/portfolio/assets/favicon.webp">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:description" content="Welcome to my portfolio!">
 </head>
 <body>
     <div class="project-detail-container">
