--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
                     <h3>Tools</h3>
                     <div class="skills-grid">
                         <div class="skill-item">
-                            <img src="assets/skills/sql.png" class="custom-skill-icon" alt="SQL">
+                            <img src="assets/skills/sql.svg" class="custom-skill-icon" alt="SQL">
                             <span class="skill-name">SQL</span>
                         </div>
                         <div class="skill-item">
-                            <img src="assets/skills/chart.png" class="custom-skill-icon" alt="Power BI">
+                            <img src="assets/skills/power-bi.png" class="custom-skill-icon" alt="Power BI">
                             <span class="skill-name">Power BI</span>
                         </div>
                         <div class="skill-item">
@@ -123,7 +123,7 @@
                             <span class="skill-name">Python</span>
                         </div>
                         <div class="skill-item">
-                            <img src="assets/skills/git.png" class="custom-skill-icon" alt="Git">
+                            <img src="assets/skills/git.svg" class="custom-skill-icon" alt="Git">
                             <span class="skill-name">Git</span>
                         </div>
                         <div class="skill-item">
@@ -131,7 +131,7 @@
                             <span class="skill-name">GitHub</span>
                         </div>
                         <div class="skill-item">
-                            <img src="assets/skills/database.png" class="custom-skill-icon" alt="MongoDB">
+                            <img src="assets/skills/mongodb.svg" class="custom-skill-icon" alt="MongoDB">
                             <span class="skill-name">MongoDB</span>
                         </div>
                         <div class="skill-item">
