made some changes

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                     <h3>Frameworks</h3>
                     <div class="skills-grid">
                         <div class="skill-item">
-                            <img src="assets/skills/python.png" class="custom-skill-icon" alt="Flask">
+                            <img src="assets/skills/flask-output.svg" class="custom-skill-icon" alt="Flask">
                             <span class="skill-name">Flask</span>
                         </div>
                         <div class="skill-item">
@@ -219,51 +219,47 @@
             <div class="projects-grid">
 
                 <!-- AquaSense Project (Featured) -->
-                <div class="project-card main-project" data-project="project1" id="aquasense">
+                <div class="project-card main-project" data-project="project1" id="nl2sql">
                     <div class="project-image">
-                        <img src="assets/project_images/aquasense.png" alt="aquasense"><!-- size: 600x400 -->
+                        <img src="assets/project_images/nl2sql.png" alt="nl2sql"><!-- size: 600x400 -->
                     </div>
                     <div class="project-info">
-                        <h3 class="project-title">AquaSense AI</h3>
+                        <h3 class="project-title">SQL AI Agent</h3>
                         <div class="project-tags">
-                            <span class="project-tag">Django</span>
-                            <span class="project-tag">Machine Learning</span>
-                            <span class="project-tag">Water Quality Analysis</span>
-                            <span class="project-tag">IoT Integration</span>
-                            <span class="project-tag">API Integration</span>
-                            <span class="project-tag">Gradient Boosting</span>
-                            <span class="project-tag">Ensemble Models</span>
-                            <span class="project-tag">Environmental Tech</span>
+                            <span class="project-tag">Python</span>
+                            <span class="project-tag">AI Agent</span>
+                            <span class="project-tag">NLP</span>
+                            <span class="project-tag">MySQL</span>
+                            <span class="project-tag">Prompt Engineering</span>
+                            <span class="project-tag">SQL Automation</span>
+                            <span class="project-tag">Data Retrieval</span>
+                            <span class="project-tag">Gemini API</span>
                         </div>
-                        <p>A Django-based water quality prediction system using multiple machine learning models that provides parameter assessment and treatment suggestions through both manual input and IoT sensor integration.</p>
+                        <p>SQL AI Agent is an AI tool that transforms natural language into SQL queries, enabling non-technical users to access and query MySQL databases effortlessly and efficiently.</p>
                         <div class="project-buttons">
                             <!-- <a href="./pages/aquasense.html" target="_blank" onclick="event.stopPropagation()" class="btn btn-secondary btn-sm">View Project</a> -->
-                            <a href="./pages/aquasense.html" class="btn btn-secondary btn-sm">View Project &nbsp;<i class="fa-solid fa-up-right-from-square"></i></a>
+                            <a href="./pages/nl2sql.html" class="btn btn-secondary btn-sm">View Project &nbsp;<i class="fa-solid fa-up-right-from-square"></i></a>
                         </div>
                     </div>
                 </div>
                 
                 <!-- Project 2 -->
-                <div class="project-card" data-project="project2" id="codex">
+                <div class="project-card" data-project="project2" id="aquasense">
                     <div class="project-image">
-                        <img src="assets/project_images/codex.jpeg" alt="codex"><!-- size: 600x400 -->
+                        <img src="assets/project_images/aquasense.png" alt="codex"><!-- size: 600x400 -->
                     </div>
                     <div class="project-info">
-                        <h3 class="project-title">CodeX Drink Insights</h3>
+                        <h3 class="project-title">AquaSense AI</h3>
                         <div class="project-tags">
-                            <span class="project-tag">Power BI</span>
-                            <span class="project-tag">Data Visualization</span>
-                            <span class="project-tag">Market Analysis</span>
-                            <span class="project-tag">Consumer Insights</span>
-                            <span class="project-tag">Business Intelligence</span>
-                            <!-- <span class="project-tag">Survey Data</span>
-                            <span class="project-tag">Marketing Strategy</span>
-                            <span class="project-tag">Dashboard Design</span> -->
+                            <span class="project-tag">Machine Learning</span>
+                            <span class="project-tag">Water Quality Analysis</span>
+                            <span class="project-tag">IoT Integration</span>
+                            <span class="project-tag">API Integration</span>
                         </div>
-                        <p>A Power BI dashboard analyzing survey data from 10,000 respondents to provide strategic insights for CodeX, a German energy drink company entering the Indian market.</p>
+                        <p>A Django-based water quality prediction system using multiple machine learning models that provides parameter assessment and treatment suggestions through both manual input and IoT sensor integration.</p>
                         <div class="project-buttons">
                             <!-- <a href="./pages/aquasense.html" target="_blank" onclick="event.stopPropagation()" class="btn btn-secondary btn-sm">View Project</a> -->
-                            <a href="./pages/codex.html" class="btn btn-secondary btn-sm">View Project &nbsp;<i class="fa-solid fa-up-right-from-square"></i></a>
+                            <a href="./pages/aquasense.html" class="btn btn-secondary btn-sm">View Project &nbsp;<i class="fa-solid fa-up-right-from-square"></i></a>
                         </div>
                     </div>
                 </div>
@@ -293,28 +289,28 @@
                         </div>
                     </div>
                 </div>
-
+                
                 <!-- Project 4 -->
-                <div class="project-card" data-project="project4" id="atliq">
+                <div class="project-card" data-project="project2" id="codex">
                     <div class="project-image">
-                        <img src="assets/project_images/atliq.webp" alt="atliq"><!-- size: 600x400 -->
+                        <img src="assets/project_images/codex.jpeg" alt="codex"><!-- size: 600x400 -->
                     </div>
                     <div class="project-info">
-                        <h3 class="project-title">Atliq Mart Analysis</h3>
+                        <h3 class="project-title">CodeX Drink Insights</h3>
                         <div class="project-tags">
-                            <span class="project-tag">Python</span>
-                            <span class="project-tag">Retail Analytics</span>
-                            <span class="project-tag">Pandas</span>
-                            <span class="project-tag">Matplotlib</span>
-                            <span class="project-tag">Promotional Analysis</span>
-                            <!-- <span class="project-tag">Data Analysis</span>
+                            <span class="project-tag">Power BI</span>
                             <span class="project-tag">Data Visualization</span>
-                            <span class="project-tag">Business Intelligence</span> -->
+                            <span class="project-tag">Market Analysis</span>
+                            <span class="project-tag">Consumer Insights</span>
+                            <span class="project-tag">Business Intelligence</span>
+                            <!-- <span class="project-tag">Survey Data</span>
+                            <span class="project-tag">Marketing Strategy</span>
+                            <span class="project-tag">Dashboard Design</span> -->
                         </div>
-                        <p>A data-driven analysis of promotional campaigns for AtliQ Mart retail chain using Python to identify high-performing promotions and provide actionable insights.</p>
+                        <p>A Power BI dashboard analyzing survey data from 10,000 respondents to provide strategic insights for CodeX, a German energy drink company entering the Indian market.</p>
                         <div class="project-buttons">
                             <!-- <a href="./pages/aquasense.html" target="_blank" onclick="event.stopPropagation()" class="btn btn-secondary btn-sm">View Project</a> -->
-                            <a href="./pages/atliq.html" class="btn btn-secondary btn-sm">View Project &nbsp;<i class="fa-solid fa-up-right-from-square"></i></a>
+                            <a href="./pages/codex.html" class="btn btn-secondary btn-sm">View Project &nbsp;<i class="fa-solid fa-up-right-from-square"></i></a>
                         </div>
                     </div>
                 </div>
