made some changes certificates

--- a/index.html
+++ b/index.html
@@ -429,10 +429,10 @@
 
                 <!-- Certificate 1 -->
                 <div class="certificate-item" data-aos="zoom-in" data-aos-delay="100">
-                    <a href="https://www.hackerrank.com/certificates/4dc2ea3b6fb1" target="_blank">
-                        <img src="assets/certificates/sql_certificate.jpg" alt="SQL Certificate" class="certificate-img">
+                    <a href="https://www.hackerrank.com/certificates/93eeb1a9cd0f" target="_blank">
+                        <img src="assets/certificates/sql_intermediate.png" alt="SQL Certificate" class="certificate-img">
                     </a>
-                    <p style="margin-bottom: 10px;">SQL Certificate</p>
+                    <p style="margin-bottom: 10px;">SQL (Intermediate)</p>
                 </div>
 
                 <!-- Certificate 2 -->
@@ -446,7 +446,7 @@
                 <!-- Certificate 3 -->
                 <div class="certificate-item" data-aos="zoom-in" data-aos-delay="300">
                     <a href="https://www.credly.com/badges/ef9bf812-4ed7-4dc0-8607-e1b974c55676" target="_blank">
-                        <img src="assets/certificates/Alteryx_Foundational.jpg" alt="Alteryx Foundational" class="certificate-img">
+                        <img src="assets/certificates/alteryx_foundational.jpg" alt="Alteryx Foundational" class="certificate-img">
                     </a>
                     <p style="margin-bottom: 10px;">Alteryx Foundational</p>
                 </div>
