--- a/pages/beast_certificates.html
+++ b/pages/beast_certificates.html
@@ -59,20 +59,21 @@
     <section class="all-certificates" id="certificates">
         <div class="container">
             <div class="certificates-grid">
-                <!-- Certificate 1 -->
+
+                <!-- SQL (Intermediate) -->
                 <div class="certificate-card" data-category="programming" data-platform="hackerrank" data-aos="fade-up" data-aos-delay="100">
                     <div class="certificate-image">
-                        <img class="responsive-image" src="../assets/certificates/sql_certificate.jpg" alt="SQL Certificate">
+                        <img class="responsive-image" src="../assets/certificates/sql_intermediate.png" alt="SQL Certificate">
                     </div>
                     <div class="certificate-info">
-                        <h3 class="certificate-title">SQL Certificate</h3>
+                        <h3 class="certificate-title">SQL (Intermediate)</h3>
                         <p class="certificate-issuer">HackerRank</p>
-                        <p class="certificate-date">Issued: May 2024</p>
-                        <a href="https://www.hackerrank.com/certificates/4dc2ea3b6fb1" target="_blank" class="certificate-link">View Certificate &nbsp;<i class="fa-solid fa-up-right-from-square"></i></a>
+                        <p class="certificate-date">Issued: March 2025</p>
+                        <a href="https://www.hackerrank.com/certificates/93eeb1a9cd0f" target="_blank" class="certificate-link">View Certificate &nbsp;<i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
 
-                <!-- Certificate 2 -->
+                <!-- Python Certificate -->
                 <div class="certificate-card" data-category="programming" data-platform="hackerrank" data-aos="fade-up" data-aos-delay="200">
                     <div class="certificate-image">
                         <img class="responsive-image" src="../assets/certificates/python_certificate.jpg" alt="Python Certificate">
@@ -85,23 +86,10 @@
                     </div>
                 </div>
 
-                <!-- Certificate 3 -->
-                <div class="certificate-card" data-category="analytics" data-platform="alteryx,credly" data-aos="fade-up" data-aos-delay="300">
-                    <div class="certificate-image">
-                        <img class="responsive-image" src="../assets/certificates/Alteryx_Foundational.jpg" alt="Alteryx Foundational">
-                    </div>
-                    <div class="certificate-info">
-                        <h3 class="certificate-title">Alteryx Foundational</h3>
-                        <p class="certificate-issuer">Alteryx (via Credly)</p>
-                        <p class="certificate-date">Issued: December 2024</p>
-                        <a href="https://www.credly.com/badges/ef9bf812-4ed7-4dc0-8607-e1b974c55676" target="_blank" class="certificate-link">View Certificate &nbsp;<i class="fa-solid fa-up-right-from-square"></i></a>
-                    </div>
-                </div>
-
-                <!-- Certificate 4 -->
+                <!-- Machine Learning Fundamentals -->
                 <div class="certificate-card" data-category="machine-learning,data-science" data-platform="alteryx,credly" data-aos="fade-up" data-aos-delay="100">
                     <div class="certificate-image">
-                        <img class="responsive-image" src="../assets/certificates/Machine_Learning_Fundamentals.jpg" alt="Machine Learning Fundamentals">
+                        <img class="responsive-image" src="../assets/certificates/ml_fundamentals.jpg" alt="Machine Learning Fundamentals">
                     </div>
                     <div class="certificate-info">
                         <h3 class="certificate-title">Machine Learning Fundamentals</h3>
@@ -111,10 +99,36 @@
                     </div>
                 </div>
 
-                <!-- Certificate 5 -->
+                <!-- SQL (Basic) -->
+                <div class="certificate-card" data-category="programming" data-platform="hackerrank" data-aos="fade-up" data-aos-delay="100">
+                    <div class="certificate-image">
+                        <img class="responsive-image" src="../assets/certificates/SQL_Basic.jpg" alt="SQL Certificate">
+                    </div>
+                    <div class="certificate-info">
+                        <h3 class="certificate-title">SQL (Basic)</h3>
+                        <p class="certificate-issuer">HackerRank</p>
+                        <p class="certificate-date">Issued: May 2024</p>
+                        <a href="https://www.hackerrank.com/certificates/4dc2ea3b6fb1" target="_blank" class="certificate-link">View Certificate &nbsp;<i class="fa-solid fa-up-right-from-square"></i></a>
+                    </div>
+                </div>
+
+                <!-- Alteryx Foundational -->
+                <div class="certificate-card" data-category="analytics" data-platform="alteryx,credly" data-aos="fade-up" data-aos-delay="300">
+                    <div class="certificate-image">
+                        <img class="responsive-image" src="../assets/certificates/alteryx_foundational.jpg" alt="Alteryx Foundational">
+                    </div>
+                    <div class="certificate-info">
+                        <h3 class="certificate-title">Alteryx Foundational</h3>
+                        <p class="certificate-issuer">Alteryx (via Credly)</p>
+                        <p class="certificate-date">Issued: December 2024</p>
+                        <a href="https://www.credly.com/badges/ef9bf812-4ed7-4dc0-8607-e1b974c55676" target="_blank" class="certificate-link">View Certificate &nbsp;<i class="fa-solid fa-up-right-from-square"></i></a>
+                    </div>
+                </div>
+
+                <!-- Alteryx Auto Insights -->
                 <div class="certificate-card" data-category="analytics" data-platform="alteryx,credly" data-aos="fade-up" data-aos-delay="200">
                     <div class="certificate-image">
-                        <img class="responsive-image" src="../assets/certificates/Alteryx_Auto_Insights.jpg" alt="Alteryx Auto Insights">
+                        <img class="responsive-image" src="../assets/certificates/alteryx_auto_insights.jpg" alt="Alteryx Auto Insights">
                     </div>
                     <div class="certificate-info">
                         <h3 class="certificate-title">Alteryx Auto Insights</h3>
@@ -124,10 +138,10 @@
                     </div>
                 </div>
 
-                <!-- Certificate 6 -->
+                <!-- AWS Intro to Cloud Semester 2 -->
                 <div class="certificate-card" data-category="cloud" data-platform="aws" data-aos="fade-up" data-aos-delay="300">
                     <div class="certificate-image">
-                        <img class="responsive-image" src="../assets/certificates/AWS Intro to Cloud Sem 2.jpg" alt="AWS Intro to Cloud Sem 2">
+                        <img class="responsive-image" src="../assets/certificates/aws_intro_sem_2.jpg" alt="aws_intro_sem_2">
                     </div>
                     <div class="certificate-info">
                         <h3 class="certificate-title">AWS Intro to Cloud Semester 2</h3>
